--- a/.eslintrc
+++ b/.eslintrc
@@ -13,8 +13,8 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "eslint-config-prettier",
-    "eslint-config-prettier/@typescript-eslint"
+    "eslint-config-prettier/@typescript-eslint",
+    "eslint-config-prettier"
   ],
   "rules": {
     "strict": ["error", "never"]
